fixed too large font size for headers on mobile

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -1461,7 +1461,7 @@ h2.lower_header {
 		margin: 0 -16px 0px;
 		/*min-height: 171px;*/
 	}
-	.jumbotron h1 {font-size: 40px;}
+	.jumbotron h1 {font-size: 25px;}
 	.jumbotron h2{
 		font-size: 20px;
 		line-height: 22px;
